# debate_dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  migrate.py  settings.json
assets/: main.css
src/: db.rs  i18n.rs  main.rs  settings.rs  sync.rs  types.rs
src/components/: create_new.rs  home.rs  icons.rs  mod.rs  navbar.rs  order_of_speakers.rs  settings_modal.rs  speech.rs  timer.rs
