[package]
name = "debate_dioxus"
version = "1.0.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.4", features = ["desktop", "router"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
dirs = "5"
async-std = { version = "1", features = ["attributes"] }
ico = "0.3"
