[package]
name = "debate_dioxus"
version = "1.3.1"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.3", features = ["desktop", "router"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
once_cell = "1"
dirs = "5"
async-std = { version = "1", features = ["attributes"] }
ico = "0.3"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }

[build-dependencies]
winres = "0.1"
